<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ebookapp.NextPage" >
   
    <item 
        android:id="@+id/menu_chapter"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/lbl_chapter"/>
    
    <item
        android:id="@+id/menu_next"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/lbl_start_reading"/>
    
    <item
        android:id="@+id/menu_add_bookmark"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/lbl_add_bookmark"/>
    
    <item
        android:id="@+id/menu_mark_text"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/lbl_mark_text"/>
    
    <item
        android:id="@+id/menu_clear_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/lbl_clear_text"/>
    
    <item
        android:id="@+id/menu_speak"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/lbl_speak"/>
    
    <item 
        android:id="@+id/menu_bookmark"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/lbl_bookmark"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/lbl_home"/>
    

</menu>
