<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ebookapp.MainActivity" >

    <item 
        android:id="@+id/menu_bookmark"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/lbl_bookmark"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item 
        android:id="@+id/menu_chapter"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/lbl_chapter"/>
    
    <item 
        android:id="@+id/menu_next"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/lbl_next"/>

</menu>
